--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "root": true,
-  "extends": ["airbnb", "prettier", "next/core-web-vitals"],
+  "extends": ["prettier", "next/core-web-vitals"],
   "plugins": ["prettier", "formatjs"],
   "rules": {
     "formatjs/no-offset": "error",
